--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,10 @@ http-body-util = "0.1.0-rc.2"
 hyper = { version = "1.0.0-rc.2", features = ["server", "http1"] }
 lazy_static = "1.4.0"
 log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
-rustls-pemfile = "1.0.2"
-tokio = { version = "1.24.2", features = ["rt-multi-thread", "net", "fs", "signal", "time", "sync", "macros"] }
-tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
+rustls-pemfile = { version = "1.0.2", optional = true }
+tokio = { version = "1.24.2", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
+tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"], optional = true }
 tokio-tungstenite = "0.18.0"
+
+[features]
+secure_server = ["dep:rustls-pemfile", "dep:tokio-rustls"]
