--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-recursion = "1.0.2"
+async-recursion = { version = "1.0.2", optional = true }
 bytes = "1.3.0"
 dotenv = "0.15.0"
 env_logger = "0.10.0"
@@ -19,4 +19,5 @@ tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"], opt
 tokio-tungstenite = "0.18.0"
 
 [features]
+public_caching = ["dep:async-recursion"]
 secure_server = ["dep:rustls-pemfile", "dep:tokio-rustls"]
