--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,20 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-recursion = { version = "1.0.2", optional = true }
 bytes = "1.3.0"
 dotenv = "0.15.0"
 env_logger = "0.10.0"
 futures-util = "0.3.26"
+hex = { version = "0.4.3", optional = true }
 http-body-util = "0.1.0-rc.2"
 hyper = { version = "1.0.0-rc.2", features = ["server", "http1"] }
 lazy_static = "1.4.0"
 log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_error"] }
 rustls-pemfile = { version = "1.0.2", optional = true }
+sha-1 = { version = "0.10.1", optional = true }
 tokio = { version = "1.24.2", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
 tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"], optional = true }
 tokio-tungstenite = "0.18.0"
+walkdir = { version = "2.3.2", optional = true }
 
 [features]
-public_caching = ["dep:async-recursion"]
+public_resources_caching = ["dep:hex", "dep:sha-1", "dep:walkdir"]
 secure_server = ["dep:rustls-pemfile", "dep:tokio-rustls"]
