--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bytes = "1.3.0"
 dotenv = "0.15.0"
 env_logger = "0.10.0"
+fastrand = "1.8.0"
 futures-util = "0.3.26"
 hex = { version = "0.4.3", optional = true }
 http-body-util = "0.1.0-rc.2"
