--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,6 @@ SETTLERS_BIND_ADDR = 127.0.0.1:80
 
 # Path to public resources directory, absolute or relative from run directory
 SETTLERS_PUBLIC_RESOURCES_PATH = ../public
+
+# Connection to database URL
+SETTLERS_DB_URL = protocol://username:password@host/database
