--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,6 +3,12 @@ name = "settlers-server"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+codegen-units = 1
+lto = true
+panic = "abort"
+strip = true
+
 [dependencies]
 bytes = "1.3.0"
 config = { version = "0.13.3", default-features = false, features = ["toml"] }
