--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,13 +10,13 @@ panic = "abort"
 strip = true
 
 [dependencies]
-bytes = "1.3.0"
+bytes = "1.4.0"
 config = { version = "0.13.3", default-features = false, features = ["toml"] }
 dirs = "4.0.0"
 dotenv = "0.15.0"
-env_logger = "0.10.0"
-fastrand = "1.8.0"
-futures-util = "0.3.26"
+env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
+fastrand = "1.9.0"
+futures-util = { version = "0.3.26", default-features = false, features = ["sink", "std"] }
 hex = { version = "0.4.3", optional = true }
 http-body-util = "0.1.0-rc.2"
 hyper = { version = "1.0.0-rc.2", features = ["server", "http1"] }
@@ -28,9 +28,9 @@ sea-orm-migration = { version = "0.11.0", default-features = false, features = [
 sea-query = "0.28.3"
 serde = { version = "1.0.152", features = ["derive"] }
 sha-1 = { version = "0.10.1", optional = true }
-tokio = { version = "1.24.2", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
-tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"], optional = true }
-tokio-tungstenite = "0.18.0"
+tokio = { version = "1.25.0", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
+tokio-rustls = { version = "0.23.4", default-features = false, features = ["dangerous_configuration"], optional = true }
+tokio-tungstenite = { version = "0.18.0", default-features = false, features = ["handshake"] }
 walkdir = { version = "2.3.2", optional = true }
 
 [features]
