Add problem key name to parse config error

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -27,6 +27,7 @@ sea-orm = { version = "0.11.0", default-features = false, features = ["macros", 
 sea-orm-migration = { version = "0.11.0", default-features = false, features = ["runtime-tokio-rustls"] }
 sea-query = "0.28.3"
 serde = { version = "1.0.152", features = ["derive"] }
+serde_path_to_error = "0.1.9"
 sha-1 = { version = "0.10.1", optional = true }
 tokio = { version = "1.25.0", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
 tokio-rustls = { version = "0.23.4", default-features = false, features = ["dangerous_configuration"], optional = true }
