--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -41,4 +41,5 @@ db_postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
 db_sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
 public_resources_caching = ["hex", "sha-1", "walkdir"]
 secure_server = ["rustls-pemfile", "tokio-rustls"]
+release_max_level_debug = ["log/release_max_level_debug"]
 rustls_logging = []
