--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,6 +2,10 @@
 name = "settlers-server"
 version = "0.1.0"
 edition = "2021"
+description = "Online implementation of the popular board game Catan"
+authors = ["Sergei Ivankov <sergeiivankov@pm.me>"]
+repository = "https://github.com/sergeiivankov/settlers"
+license = "MIT"
 
 [profile.release]
 codegen-units = 1
