Move public resources directory to client folder, generation html file with public resources cache clean, fix packets descriptions

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,7 +2,7 @@
 name = "settlers-server"
 version = "0.1.0"
 edition = "2021"
-description = "Online implementation of the popular board game Catan"
+description = "Server of online implementation of the popular board game Catan"
 authors = ["Sergei Ivankov <sergeiivankov@pm.me>"]
 repository = "https://github.com/sergeiivankov/settlers"
 license = "MIT"
