--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,20 @@
   "name": "settlers-client",
   "version": "0.1.0",
   "type": "module",
+  "description": "Client of online implementation of the popular board game Catan",
+  "author": "Sergei Ivankov <sergeiivankov@pm.me>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sergeiivankov/settlers.git"
+  },
+  "license": "MIT",
   "scripts": {
     "build": "rollup -c"
   },
   "devDependencies": {
     "rollup": "3.17.2",
+    "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-sass": "1.12.17",
     "svelte": "3.55.1"
-  },
-  "license": "MIT"
+  }
 }
