Change URI rules

--- a/docs/settlers.toml
+++ b/docs/settlers.toml
@@ -7,7 +7,7 @@
 bind_addr = "127.0.0.1:80"
 
 # Path to public resources directory, absolute or relative from run directory
-public_resources_path = "../public"
+public_resources_path = "../client/dist"
 
 # Database connection
 [database]
