--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ description = "Server of online implementation of the popular board game Catan"
 authors = ["Sergei Ivankov <sergeiivankov@pm.me>"]
 repository = "https://github.com/sergeiivankov/settlers"
 license = "MIT"
+resolver = "2"
 
 [profile.release]
 codegen-units = 1
@@ -36,21 +37,25 @@ serde = { version = "1.0.154", features = ["derive"] }
 serde_path_to_error = "0.1.10"
 sha-1 = { version = "0.10.1", optional = true }
 strum = { version = "0.24.1", features = ["derive"] }
+tar = { version = "0.4.38", default-features = false, optional = true }
 tokio = { version = "1.26.0", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
 tokio-rustls = { version = "0.23.4", default-features = false, features = ["dangerous_configuration"], optional = true }
 tokio-tungstenite = { version = "0.18.0", default-features = false, features = ["handshake"] }
 walkdir = { version = "2.3.2", optional = true }
 
 [build-dependencies]
+flate2 = { version = "1.0.25", optional = true }
 pb-rs = { version = "0.10.0", default-features = false }
+tar = { version = "0.4.38", default-features = false, optional = true }
 walkdir = "2.3.2"
 
 [features]
 default = ["db_sqlite"]
+client_resources_caching = ["flate2", "hex", "sha-1", "walkdir"]
+client_resources_packing = ["flate2", "hex", "sha-1", "tar"]
 db_mysql = ["sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]
 db_postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
 db_sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
-public_resources_caching = ["flate2", "hex", "sha-1", "walkdir"]
 secure_server = ["rustls-pemfile", "tokio-rustls"]
 release_max_level_debug = ["log/release_max_level_debug"]
 rustls_logging = []
