--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,12 @@
   "scripts": {
     "build": "rollup -c"
   },
+  "dependencies": {
+    "tslib": "^2.5.0"
+  },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
+    "protobufjs": "7.2.2",
     "rollup": "3.17.2",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-sass": "1.12.17",
