--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,14 @@
     "build": "rollup -c"
   },
   "dependencies": {
-    "tslib": "^2.5.0"
+    "tslib": "2.5.0"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-typescript": "11.0.0",
     "protobufjs": "7.2.2",
-    "rollup": "3.17.2",
+    "rollup": "3.20.0",
     "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-sass": "1.12.17",
-    "svelte": "3.55.1"
+    "rollup-plugin-sass": "1.12.19",
+    "svelte": "3.57.0"
   }
 }
